# cirro-azcli-ext

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
azext_cirro_azcli_ext/: __init__.py  custom.py  db.py
