[project]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["apsw"]
description = "Azure CLI extension that passively monitors Azure CLI commands and logs them to a file for Cirro ingestion."
name = "cirro-azcli-ext"
readme = "README.md"
requires-python = ">=3.9"
version = "1.0.0"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "wheel"]

[tool.setuptools.packages.find]
include = ["azext_cirro_azcli_ext*"]
